position relative and nowrap - should fix icon issue on IE7
git-svn-id: file:///svn/phpbb/trunk@7651 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -49,8 +49,10 @@ ul.topiclist dfn {
 
 ul.topiclist li.row dt a.subforum {
 	background-image: none;
-	background-position: 0pt 50%;
+	background-position: 0 50%;
 	background-repeat: no-repeat;
+	position: relative;
+	white-space: nowrap;
 	padding: 0 0 0 12px;
 }
 
